# ruo-project-ai-chatbot

em-ai_api/: .dockerignore  .gitignore  docker-compose.yaml  dockerfile  pyproject.toml
em-ai_api/app/: main.py
em-ai_api/app/api/: README.md  news_router.py  patent_router.py
em-ai_api/app/common/core/: utils.py
em-ai_api/app/common/news/base/: hf_model.py  hf_model_utils.py
em-ai_api/app/common/news/news_hf_models/: news_category.py  news_company.py  news_esg.py  news_investment.py  news_keyphrase.py
em-ai_api/app/common/patent/base/: patent_queries.py  patent_query_generator.py  patent_utils.py  prompts.py  query_generator_utils.py  sklearn_model.py
em-ai_api/app/common/patent/patent_utils/: patent_generation_utils.py  patent_search_utils.py  potential_buyer_info_utils.py  tech_price_pred_utils.py
em-ai_api/app/common/patent/resources/: hscode.json
em-ai_api/app/config/: ai_status_code.py  auth.py  custom_errors.py  settings.py
em-ai_api/app/models/: news_models.py  patent_models.py
